Niveau adaptatif jeu1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
         <item>Débutant</item>
         <item>Intermédiaire</item>
         <item>Expert</item>
+        <item>Adaptatif</item>
     </string-array>
 
 </resources>
